add knpmenu, modified styles

--- a/app/Resources/css/1024.less
+++ b/app/Resources/css/1024.less
@@ -23,4 +23,12 @@
       font-size: 18px;
     }
   }
+
+  .team{
+    .team-detail {
+      padding-left: 0;
+      padding-right: 0;
+
+    }
+  }
 }
