--- a/app/Resources/css/480.less
+++ b/app/Resources/css/480.less
@@ -6,4 +6,28 @@
       padding-right: 10px;
     }
   }
+
+  .our_cursos{
+    .block-cursos{
+      #spacing{
+        width: 100%;
+      }
+
+      .element-pink{
+        width: 100%;
+      }
+
+      .element-green{
+        width: 100%;
+      }
+    }
+  }
+
+  .team{
+    .team-detail{
+      .team-person {
+        width: 100%;
+      }
+    }
+  }
 }
