--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -144,7 +144,6 @@ body{
 
   nav a {
     display: inline-block;
-    width: 100px;
     text-align: center;
     text-decoration: none;
     color: #000000;
@@ -268,6 +267,10 @@ body{
       width: 1%;
       display: inline-block;
     }
+    #spacing-block{
+      width: 1%;
+      display: inline-block;
+    }
 
     .element-pink{
       width: 24%;
@@ -308,10 +311,11 @@ body{
   }
 
   .team{
+    width: 100%;
     .team-detail{
-      padding-left: 80px;
-      padding-right: 80px;
       text-align: center;
+      width: 80%;
+      margin: 0 auto;
       padding-bottom: 10px;
       .title-team{
         font-family: "Bebas Neue", arial, sans-serif;
