--- a/app/Resources/views/desktop/_our_cursos.html.twig
+++ b/app/Resources/views/desktop/_our_cursos.html.twig
@@ -1,5 +1,5 @@
 <div class="our_cursos">
-    <h3 class="title-section">Nuestros cursos</h3>
+    <h3 id="nuestros-cursos" class="title-section">Nuestros cursos</h3>
     <div class="block-cursos">
         <div class="element-pink">
             <img src="">
@@ -20,7 +20,7 @@
                 <li>ilustración infantil</li>
             </ul>
         </div>
-        <div id="spacing"></div>
+        <div id="spacing-block"></div>
         <div class="element-pink">
             <img src="">
             <ul>
