--- a/app/Resources/views/desktop/_team.html.twig
+++ b/app/Resources/views/desktop/_team.html.twig
@@ -1,3 +1,4 @@
+<a name="nuestros-profesores"></a>
 <div class="team">
     <h3 class="title-section">Nuestros cursos</h3>
     <div class="team-detail">
