--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,7 +15,7 @@
         <script src="{{ asset('sboza2/js/jquery-3.1.0.min.js') }}"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="{{ asset('sboza2/js/jquery.bxslider.min.js') }}"></script>
-        <link href="{{ asset('sboza2/css/jquery.bxslider.min.css') }}" rel="stylesheet" />
+        <link href="{{ asset('sboza2/css/jquery.bxslider.css') }}" rel="stylesheet" />
 
     </head>
     <body>
