--- a/app/Resources/views/desktop/_contactHome.html.twig
+++ b/app/Resources/views/desktop/_contactHome.html.twig
@@ -4,7 +4,7 @@
     <div class="form">
         <div class="wrapper-form">
             <div class="text-form">
-                <h2>Contacto</h2>
+                <h2 id="contacto">Contacto</h2>
                 <h3 class="text-title-form">UNA ATENCIÓN PERSONALIZADA</h3>
                 <p>Si deseas recibir más información sobre un área específica de nuestra formación
                     puedes ponerte en contacto con nosotros a través del siguiente formulario.</p>
