--- a/app/Resources/views/desktop/_our_center.html.twig
+++ b/app/Resources/views/desktop/_our_center.html.twig
@@ -1,4 +1,4 @@
-<a name="our_center"></a>
+<a name="nuestro-centro"></a>
 <div class="our_center">
     <div id="text">
         <h2>Nuestro centro</h2>
