--- a/app/Resources/views/desktop/thanks.html.twig
+++ b/app/Resources/views/desktop/thanks.html.twig
@@ -15,3 +15,24 @@
 {% endblock %}
 
 {% block footer %}{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        /* <![CDATA[ */
+        var google_conversion_id = 877218598;
+        var google_conversion_language = "en";
+        var google_conversion_format = "3";
+        var google_conversion_color = "ffffff";
+        var google_conversion_label = "XMGXCPiOimkQppalogM";
+        var google_remarketing_only = false;
+        /* ]]> */
+    </script>
+    <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+    </script>
+    <noscript>
+        <div style="display:inline;">
+            <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/877218598/?label=XMGXCPiOimkQppalogM&amp;guid=ON&amp;script=0"/>
+        </div>
+    </noscript>
+{% endblock %}
