add code analitics google

--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -225,6 +225,7 @@ body{
     text-align: center;
     font-family: "Bebas Neue", arial, sans-serif;
     font-size: 47px;
+    height: 400px;
   }
   .logo-thanks{
     i{
