changed header and footer

--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -9,6 +9,11 @@
 
     i{
       font-size: 26px;
+      vertical-align: top;
+    }
+
+    img{
+      width: 26px;
     }
 
     a{
@@ -25,25 +30,27 @@
       vertical-align: middle;
       img{
         width: 26px;
-        height: 26px;
+      }
+      .text-contact-now{
+        display: none;
       }
     }
   }
 
-  .box_phone_mobile{
-    background: #cccccc;
-    font-size: 26px;
-    height: 100%;
-    a{
-      text-decoration: none;
-      color: #000000;
-      text-align: right;
-    }
-    img{
-      width: 26px;
-      height: 26px;
-    }
-  }
+  /*.box_phone_mobile{
+     background: #cccccc;
+     font-size: 26px;
+     height: 100%;
+     a{
+       text-decoration: none;
+       color: #000000;
+       text-align: right;
+     }
+     img{
+       width: 26px;
+       height: 26px;
+     }
+   }
 
   .box_email_mobile{
     background: #cccccc;
@@ -77,7 +84,7 @@
       color: #000000;
       text-align: right;
     }
-  }
+  }*/
 
   .header-top{
     display: none;
