--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -57,7 +57,6 @@ body{
   height: 32px;
   padding-top: 4px;
 
-
   .info-header{
     display: inline-block;
     width: 50%;
@@ -103,11 +102,15 @@ body{
     }
     .social-networks{
       display: inline-block;
-      width: 30%;
+      width: 49%;
       vertical-align: middle;
+      .text-contact-now{
+        padding-right: 11px;
+      }
       img{
         width: 18px;
         height: 18px;
+        vertical-align: middle;
       }
     }
   }
@@ -159,6 +162,27 @@ body{
 
   nav a:hover, nav a:active {
     font-weight: bold;
+  }
+}
+
+.contact-now{
+  background: #fff;
+  padding: 8px 15px 4px 17px;
+  border-radius: 5px 5px 5px 5px;
+  -moz-border-radius: 5px 5px 5px 5px;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border: 0;
+  text-decoration: none;
+  color: #000;
+}
+
+.text-contact-now{
+  text-align: center;
+  margin-top: 34px;
+  img{
+    width: 27px;
+    padding-left: 10px;
+    vertical-align: middle;
   }
 }
 
@@ -462,10 +486,9 @@ body{
   }
 }
 
-
 .footer{
   width: 100%;
-  background: url('../img/bg-footer.png') repeat;
+  background: #80cc28;
   height: 100%;
   position: relative;
   .logo-footer{
@@ -485,22 +508,15 @@ body{
       color: #000;
     }
   }
-  .phone-footer{
-    width: 38%;
-    display: inline-block;
-    text-align: right;
-    font-weight: bold;
+  .text-contact-now{
+    text-align: left;
+    margin-top: 14px;
+    padding-bottom: 34px;
+    padding-left: 13px;
     img{
-      width: 17px;
+      width: 27px;
+      padding-left: 10px;
       vertical-align: middle;
-      padding-right: 6px;
-    }
-    a{
-      text-decoration: none;
-    }
-    .phone{
-      font-size: 25px;
-      color: #fff;
     }
   }
 
