--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -82,7 +82,7 @@
                     document.body.classList.add('hamburgler-active');
                 }
             </script>
-            <script>
+            {#<script>
                 var boxMobilePhone = $(".box_phone_mobile");
                 var phoneMobile = $('#phone-mobile');
                 var active = false;
@@ -130,7 +130,7 @@
                         active = true;
                     }
                 })
-            </script>
+            </script>#}
         {% endblock %}
     </body>
 </html>
