--- a/app/Resources/css/960.less
+++ b/app/Resources/css/960.less
@@ -3,6 +3,10 @@
     nav{
       display: none;
     }
+    .logo{
+      width: 100%;
+      text-align: center;
+    }
   }
 
   .hamburgler-menu{
