fixed error in styles and website.

--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -1,4 +1,5 @@
 @media only screen and (max-width: 660px) {
+
   .header-top-mobile{
     display: block;
     width: 100%;
@@ -14,6 +15,7 @@
 
     img{
       width: 26px;
+      vertical-align: top;
     }
 
     a{
@@ -27,7 +29,6 @@
 
     .social-networks{
       display: inline-block;
-      vertical-align: middle;
       img{
         width: 26px;
       }
@@ -37,22 +38,7 @@
     }
   }
 
-  /*.box_phone_mobile{
-     background: #cccccc;
-     font-size: 26px;
-     height: 100%;
-     a{
-       text-decoration: none;
-       color: #000000;
-       text-align: right;
-     }
-     img{
-       width: 26px;
-       height: 26px;
-     }
-   }
-
-  .box_email_mobile{
+  /*.box_email_mobile{
     background: #cccccc;
     font-size: 26px;
     height: 100%;
