--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -15,6 +15,12 @@ body{
   margin: 0 auto;
 }
 
+.wrapper-map{
+  iframe{
+    width: 100%;
+  }
+}
+
 .clear:before, .clear:after {
   content: " ";
   display: table;
@@ -116,6 +122,18 @@ body{
   }
 }
 
+.box_email_mobile{
+  display: none;
+}
+
+.box_phone_mobile{
+  display: none;
+}
+
+.box_date_mobile{
+  display: none;
+}
+
 .header{
   width: 100%;
   margin: 0 auto;
@@ -154,6 +172,7 @@ body{
 
   nav li a {
     border-right: 1px solid #000000;
+    padding: 0 10px;
   }
 
   nav li:last-child a {
@@ -229,6 +248,7 @@ body{
 
   .our_center{
     color: #000000;
+    padding-bottom: 60px;
     #text{
       text-align: center;
       h2{
@@ -281,12 +301,11 @@ body{
     padding-bottom: 28px;
     color: #aaa;
     text-align: center;
-    padding-top: 60px;
   }
 
   .our_cursos{
     color: #000000;
-
+    padding-bottom: 60px;
     #spacing{
       width: 1%;
       display: inline-block;
@@ -336,6 +355,7 @@ body{
 
   .team{
     width: 100%;
+    padding-bottom: 60px;
     .team-detail{
       text-align: center;
       width: 80%;
@@ -368,9 +388,10 @@ body{
 
   .news{
     color: #000000;
+    padding-bottom: 60px;
     .new{
       .img-new{
-        width: 40%;
+        width: 35%;
         display: inline-block;
         img{
           width: 350px;
@@ -379,7 +400,7 @@ body{
         }
       }
       .text-new{
-        width: 59%;
+        width: 64%;
         display: inline-block;
         vertical-align: top;
       }
