--- a/app/Resources/views/desktop/_header_top_mobile.html.twig
+++ b/app/Resources/views/desktop/_header_top_mobile.html.twig
@@ -1,7 +1,7 @@
 <div class="header-top-mobile">
     <div class="wrapper-content">
         <div class="header-top-content">
-            <i id="email-mobile" class="fa fa-envelope" aria-hidden="true"></i>
+            <a href="mailto:info@sboza2.com"><i id="email-mobile" class="fa fa-envelope" aria-hidden="true"></i></a>
             <a href="tel:+34669970256"><img src="{{ asset('sboza2/img/icons/Icono 2-05.svg') }}"></a><a href="intent://send/669970256#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"></a>
             {% include ':desktop:_social_networks.html.twig' %}
         </div>
