--- a/app/Resources/views/desktop/_social_networks.html.twig
+++ b/app/Resources/views/desktop/_social_networks.html.twig
@@ -1,4 +1,5 @@
 <div class="social-networks">
+    <a class="text-contact-now" href="tel:+34669970256">Contacta ahora</a>
     <a href="https://es-la.facebook.com/sboza2/" target="_blank" rel="nofollow"><img src="{{ asset('sboza2/img/social-networks/facebook.png') }}" alt="Facebook" title="Facebook"></a>
     <a href="https://twitter.com/sboza2" target="_blank" rel="nofollow"><img src="{{ asset('sboza2/img/social-networks/twitter.png') }}" alt="Twitter" title="Twitter"></a>
     <a href="https://www.linkedin.com/company/sboza2" target="_blank" rel="nofollow"> <img src="{{ asset('sboza2/img/social-networks/link.png') }}" alt="Linkedin" title="Linkedin"></a>
