--- a/app/Resources/views/desktop/_team.html.twig
+++ b/app/Resources/views/desktop/_team.html.twig
@@ -1,6 +1,6 @@
-<a name="nuestros-profesores"></a>
+<a name="nuestros-equipo"></a>
 <div class="team">
-    <h3 class="title-section">Nuestros cursos</h3>
+    <h3 class="title-section">Nuestro equipo</h3>
     <div class="team-detail">
         <p class="title-team">Direccion y coordinación</p>
         <div class="team-person">
