--- a/app/Resources/css/480.less
+++ b/app/Resources/css/480.less
@@ -3,7 +3,7 @@
   .header-top-mobile{
     text-align: center;
     .header-top-content{
-      padding-right: 10px;
+      padding-top: 40px;
     }
   }
 
@@ -23,10 +23,12 @@
     }
   }
 
-  .team{
-    .team-detail{
-      .team-person {
-        width: 100%;
+  .content {
+    .team {
+      .team-detail {
+        .team-person {
+          width: 100%;
+        }
       }
     }
   }
