--- a/app/Resources/views/desktop/_contactHome.html.twig
+++ b/app/Resources/views/desktop/_contactHome.html.twig
@@ -9,6 +9,11 @@
                 <p>Si deseas recibir más información sobre un área específica de nuestra formación
                     puedes ponerte en contacto con nosotros a través del siguiente formulario.</p>
             </div>
+        </div>
+        <div class="wrapper-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3178.5634951463144!2d-3.616733185136921!3d37.186843253539905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd71fcf0f15fa85d%3A0x23593dffbdee6ea7!2sCamino+de+Ronda%2C+204%2C+18003+Granada!5e0!3m2!1ses!2ses!4v1471470579167" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="wrapper-form">
             {{ form_start(form ,{'action':'', 'method':'POST'}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
