fixed error in styles and website.

--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -273,8 +273,7 @@ body{
       }
     }
     #list{
-      width: 675px;
-      margin: 0 auto;
+      width: 100%;
       h3{
         font-family: "Bebas Neue", arial, sans-serif;
         text-align: center;
@@ -286,6 +285,8 @@ body{
       }
       ul{
         font-size: 20px;
+        width: 66%;
+        margin: 0 auto;
         list-style-image: url("../img/green_cube.png");
         li{
           padding-bottom: 19px;
@@ -303,6 +304,23 @@ body{
     text-align: center;
   }
 
+  .head-course{
+    text-align: center;
+    line-height: 35px;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 25px 0 27px;
+    .text{
+      font-size: 26px;
+      line-height: 28px;
+      font-weight: bold;
+    }
+    .text-point{
+      font-size: 37px;
+      line-height: 19px;
+    }
+  }
+
   .our_cursos{
     color: #000000;
     padding-bottom: 60px;
@@ -315,12 +333,13 @@ body{
       display: inline-block;
     }
 
+
     .element-pink{
       width: 24%;
       display: inline-block;
       vertical-align: top;
       background: #aa198d;
-      height: 532px;
+      height: 650px;
       font-size: 13px;
       font-weight: bold;
       ul{
@@ -339,7 +358,7 @@ body{
       display: inline-block;
       vertical-align: top;
       background: #80cc28;
-      height: 532px;
+      height: 650px;
       font-size: 13px;
       font-weight: bold;
       ul{
