--- a/app/Resources/views/desktop/_our_cursos.html.twig
+++ b/app/Resources/views/desktop/_our_cursos.html.twig
@@ -2,7 +2,11 @@
     <h3 id="nuestros-cursos" class="title-section">Nuestros cursos</h3>
     <div class="block-cursos">
         <div class="element-pink">
-            <img src="{{ asset('sboza2/img/icons/curso1.svg') }}">
+            <div class="head-course">
+                <img src="{{ asset('sboza2/img/icons/curso1.svg') }}" title="Cursos sboza2" alt="Formación Oficial">
+                <p class="text">Formación Oficial</p>
+                <p class="text-point">...</p>
+            </div>
             <ul>
                 <li><p>diseño de productos gráficos<br><span>ARGG0110</span></p></li>
                 <li><p>ilustración<br><span>ARGG0212</span></p></li>
@@ -12,7 +16,11 @@
         </div>
         <div id="spacing"></div>
         <div class="element-green">
-            <img src="{{ asset('sboza2/img/icons/curso2.svg') }}">
+            <div class="head-course">
+                <img src="{{ asset('sboza2/img/icons/curso2.svg') }}" title="Cursos sboza2" alt="Master Profesionales">
+                <p class="text">Máster Profesionales</p>
+                <p class="text-point">...</p>
+            </div>
             <ul>
                 <li>concept art, Zbrush y grafismo para videojuegos</li>
                 <li>infoarquitectura 3D e interiores</li>
@@ -22,7 +30,11 @@
         </div>
         <div id="spacing-block"></div>
         <div class="element-pink">
-            <img src="{{ asset('sboza2/img/icons/curso3.svg') }}">
+            <div class="head-course">
+                <img src="{{ asset('sboza2/img/icons/curso3.svg') }}" title="Cursos sboza2" alt="Curso Intesivo">
+                <p class="text">Curso Intensivo</p>
+                <p class="text-point">...</p>
+            </div>
             <ul>
                 <li>ilustración digital con COREL PAINTER</li>
                 <li>ilustración digital</li>
@@ -37,7 +49,11 @@
         </div>
         <div id="spacing"></div>
         <div class="element-green">
-            <img src="{{ asset('sboza2/img/icons/curso4.svg') }}">
+            <div class="head-course">
+                <img src="{{ asset('sboza2/img/icons/curso4.svg') }}" title="Cursos sboza2" alt="Titulación Privada">
+                <p class="text">Titulación Privada</p>
+                <p class="text-point">...</p>
+            </div>
             <ul>
                 <li>diseño gráfico y diseño web</li>
                 <li>superior de diseño gráfico</li>
