--- a/app/Resources/views/desktop/_header.html.twig
+++ b/app/Resources/views/desktop/_header.html.twig
@@ -34,7 +34,7 @@
     <div class="header">
         <div class="wrapper-content">
             <div class="logo">
-                <a href="{{ path('homepage') }}" ><img src="{{ asset('sboza2/img/logo.svg') }}"></a>
+                <a href="{{ path('homepage') }}" ><img src="{{ asset('sboza2/img/logo.svg') }}" alt="Sboza2" title="sboza2"></a>
             </div>
             <nav>
                 {{ knp_menu_render('AppBundle:MenuBuilder:mainMenu') }}
