--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -115,6 +115,9 @@
       width: 100%;
       padding: 0;
     }
+    .text-contact-now{
+      text-align: center;
+    }
     .phone-footer{
       width: 100%;
       text-align: center;
