--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -134,6 +134,14 @@ body{
   display: none;
 }
 
+header{
+  display: block;
+  position: fixed;
+  margin: 0 auto;
+  width: 100%;
+  z-index: 99999;
+}
+
 .header{
   width: 100%;
   margin: 0 auto;
@@ -208,6 +216,7 @@ body{
 .content{
   color: #fff;
   background: #fff;
+  padding-top: 200px;
   .info-thank{
     text-align: center;
     font-family: "Bebas Neue", arial, sans-serif;
