--- a/app/Resources/views/desktop/_slider_show.html.twig
+++ b/app/Resources/views/desktop/_slider_show.html.twig
@@ -4,4 +4,5 @@
         <li><img src="{{ asset('sboza2/img/slideshow/image2.jpg') }}" alt="Escuela de dise&ntilde;o Sboza2" title="Escuela de dise&ntilde;o Sboza2"/></li>
         <li><img src="{{ asset('sboza2/img/slideshow/image3.jpg') }}" alt="Escuela de dise&ntilde;o Sboza2" title="Escuela de dise&ntilde;o Sboza2"/></li>
     </ul>
+    <a name="nuestro-centro"></a>
 </div>
