fixed error in styles and website.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
 
                             if ($target.length) {
 
-                                var targetOffset = $target.offset().top;
+                                var targetOffset = $target.offset().top-180;
 
                                 $('html,body').animate({scrollTop: targetOffset}, 1000);
 
