--- a/app/Resources/views/desktop/_our_cursos.html.twig
+++ b/app/Resources/views/desktop/_our_cursos.html.twig
@@ -1,5 +1,6 @@
+<a name="nuestros-cursos"></a>
 <div class="our_cursos">
-    <h3 id="nuestros-cursos" class="title-section">Nuestros cursos</h3>
+    <h3  class="title-section">Nuestros cursos</h3>
     <div class="block-cursos">
         <div class="element-pink">
             <div class="head-course">
